# minotaure

./: README.md  minotaure.opam
data/: interface.ml
lib/: Cpu_info.ml  System_info.ml  jbuild  utils.ml
src/: interface_plugin.ml  jbuild  minotaure.ml
tests/: Test_cpuinfo.ml  Test_utils.ml  jbuild  tests.ml
tests/data/: proc_stat
