opam-version: "1.2"
name: "minotaure"
version: "~unknown"
maintainer: "cedlemo <cedlemo@gmx.com>"
authors: "cedlemo <cedlemo@gmx.com>"
homepage: "https://github.com/cedlemo/minotaure"
bug-reports: "https://github.com/cedlemo/minotaure/issues"
license: "GPL3"
dev-repo: "https://github.com/cedlemo/minotaure"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "ounit"
  "cmdliner"
  "notty"
  "logs"
  "ocaml_plugin"
  "core"
  "sexplib"
  "ppx_driver"
  "ppx_jane"
]
